remove bugs in Validation.php

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@
 .idea/dictionaries
 .idea/vcs.xml
 .idea/jsLibraryMappings.xml
+.idea/StudentList.iml
+.idea/copyright/profiles_settings.xml
+.idea/modules.xml
 
 # Sensitive or high-churn files:
 .idea/dataSources.ids
