--- a/.gitignore
+++ b/.gitignore
@@ -4,14 +4,7 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff:
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/dictionaries
-.idea/vcs.xml
-.idea/jsLibraryMappings.xml
-.idea/StudentList.iml
-.idea/copyright/profiles_settings.xml
-.idea/modules.xml
+.idea/
 
 # Sensitive or high-churn files:
 .idea/dataSources.ids
